# uploadserver-preview

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/demo/: README.md  build.sh  capture.mjs  desktop.html  showcase.html  terminal.html
tests/: README.md  test_edge.js  test_viewer.js
uploadserver_preview/: __init__.py  gitinfo.py
uploadserver_preview/assets/: app.css  explorer.js  git.js  mobile.js  theme.js  themes.css  upload.js  viewer.js
