[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "uploadserver-preview"
version = "0.1.1"
description = "uploadserver plus an in-browser previewer for developer files (Markdown, JSON, code, CSV, diffs, images). No build step; works offline on a LAN."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["http", "server", "upload", "file-server", "preview", "markdown", "syntax-highlighting", "diff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "uploadserver>=5.0",
]

[project.scripts]
uploadserver-preview = "uploadserver_preview:main"

[tool.setuptools]
packages = ["uploadserver_preview"]

[tool.setuptools.package-data]
uploadserver_preview = ["assets/*"]
